--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 			<div id="chatb">
 				<div id="htxt"></div>
-				<img src="bot.png" width="400px">
+				<img src="Img/bot.png" width="400px">
 			</div>
 		</main>
 		<footer>
